{{$NEXT}}

2.32     2012-05-24

- Fix a test failure - test failed if you had 0.16 <= Sys::Syslog < 0.25
  installed.

- Added a kludgey test failure fix for failure on Cygwin. Patch by Christian
  Carey. RT #77364.


2.31     2012-05-21

- Added missing prereq - Class::Load.


2.30     2012-05-20

- Remove Sys::Syslog as a prereq, since you can use this distro perfectly well
  without it. Fixes RT #52065.

- You can now pass a subroutine reference to the sugar methods like
  $dispatch->debug() and friends. Requested by Jeffrey Thalhammer. RT #77308.

- Calling sugar methods like $dispatch->warn or $dispatch->crit did not
  normalize the log level, so the level would be passed to the outputs as
  "warn", not "warning". Reported by Karen Etheridge. RT #77203.


2.29   2011-03-18

- Add is_$level methods for compatibility with Log::Contextual. Patch by frew.


2.28   2010-12-13

- The Log::Dispatch module still had version 2.26 in the last
  release. Reported by Øyvind Skaar. RT #63876.


2.27   2010-10-16

- Fix docs on handling of arrays passed to ->debug, ->error, etc. Requested by
  Andrew Hanenkamp. RT #61400.

- Allow an arrayref for the Syslog socket option. Requested by Paul
  Bennett. RT #57631.

- License is now Artistic 2.0.


2.26   2009-09-22

- Doc updates. The 2.23 constructor API was still shown in all the output
  subclasses. Fixed by Jon Swartz.


2.25   2009-09-15

- Added a workaround for a weird tainting issue with Params::Validate. This
  caused a taint exception when a Log::Dispatch::Syslog was created under
  taint mode. Note that there is still a problem in Params::Validate itself,
  this is just a hack.


2.24   2009-09-13

- Simplified new constructor API (the 2.23 API is still silently supported but
  not documented):

      Log::Dispatch->new( outputs => [ [ 'File', ... ],
                                       [ 'Screen', ... ],
                                     ]
                        );

  Implemented by Jon Swartz.
